plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

group = 'uz.tenzorsoft'
version = '1.1.5'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    //-------------------------------------------
        // Pi4J 2.7.0 — Raspberry Pi 5 uchun to'g'ri
        implementation 'com.pi4j:pi4j-core:2.7.0'
        implementation 'com.pi4j:pi4j-plugin-gpiod:2.7.0'
        implementation 'com.pi4j:pi4j-plugin-raspberrypi:2.7.0'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'

        // j2modbus (agar Modbus kerak bo'lsa)
        implementation 'com.ghgande:j2mod:3.2.1'

        // Boshqa kerakli kutubxonalar
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.openjfx:javafx-controls:17.0.6'
        implementation 'org.openjfx:javafx-fxml:17.0.6'
        implementation 'com.fazecast:jSerialComm:2.9.3'
        implementation 'io.minio:minio:8.5.12'

    //---------------------------------------

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Spring Security uchun qo'shildi
//    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JWT (JSON Web Token) uchun qo'shildi (jjwt kutubxonasi)
    // Eng so'nggi barqaror versiyalarni ishlatish tavsiya etiladi. Misol uchun 0.12.5:
//    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
//    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
//    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5' // Agar Jackson JSON parser ishlatsangiz (Spring Boot odatda ishlatadi)
    // Yoki 'io.jsonwebtoken:jjwt-gson:0.12.5' agar Gson ishlatsangiz

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    implementation 'org.openjfx:javafx-controls:17.0.6'
    implementation 'org.openjfx:javafx-fxml:17.0.6'
    implementation 'org.openjfx:javafx-base:17.0.6'
    implementation 'org.openjfx:javafx-graphics:17.0.6'


    implementation 'org.controlsfx:controlsfx:11.2.1'

    implementation 'org.xerial:sqlite-jdbc:3.47.0.0'
    implementation 'org.hibernate.orm:hibernate-community-dialects:6.2.2.Final'

    implementation 'com.ghgande:j2mod:3.2.1'

    implementation 'com.pi4j:pi4j-core:2.7.0'
    implementation 'com.pi4j:pi4j-plugin-gpiod:2.7.0'
    implementation 'com.pi4j:pi4j-plugin-raspberrypi:2.7.0'


    implementation 'ws.schild:jave-all-deps:2.4.0'
    implementation 'jakarta.websocket:jakarta.websocket-client-api:2.1.0'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    runtimeOnly 'org.postgresql:postgresql'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'com.fazecast:jSerialComm:2.9.0' // Bu qator takrorlangan ko'rinadi, bittasi qolishi kerak

    implementation 'org.apache.pdfbox:pdfbox:2.0.29'

    implementation 'org.apache.poi:poi:5.2.3' // For basic Excel support
    implementation 'org.apache.poi:poi-ooxml:5.2.3' // For advanced Excel support (XLSX)

    // com.fazecast:jSerialComm:2.9.3 qatori yuqorida 2.9.0 bilan takrorlanmoqda.
    // Agar 2.9.3 versiyasi kerak bo'lsa, 2.9.0 ni olib tashlang yoki aksincha.
    // Men 2.9.3 ni qoldiraman, chunki u yangiroq bo'lishi mumkin.
    // Agar `com.fazecast:jSerialComm:2.9.0` ni ishlatmoqchi bo'lsangiz, quyidagi qatorni o'chiring
    // va yuqoridagi 2.9.0 ni qoldiring.
    implementation 'com.fazecast:jSerialComm:2.9.3'

}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('bootJar') {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(Jar) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

application {
    mainClass = 'uz.tenzorsoft.scaleapplication.ScaleApplication' // Update with your main class name
}

// Configure JavaFX modules
javafx {
    version = '17.0.6'
    modules = ['javafx.controls', 'javafx.fxml']
}